--- a/startcamp/1월 15일 수업.md
+++ b/startcamp/1월 15일 수업.md
@@ -49,6 +49,8 @@
 
 일반파일을 구글드라이브 드롭박스 등을 이용하는 것 처럼  git 이 관리한 코드로 깃랩, 깃헙 등을 이용
 
+---
+
 
 
 ### 깃허브 등록 순서 (나의 메모)
@@ -81,7 +83,7 @@
 
 ![깃허브 등록3](1월 15일 수업.assets/깃허브 등록3.png)
 
-`git add. `하면 해당경로의 모든 파일들을 목록에 추가해줌 (커밋을 만들기위한 파일 추가-커밋준비끝)
+`git add . `하면 해당경로의 모든 파일들을 목록에 추가해줌 (커밋을 만들기위한 파일 추가-커밋준비끝)
 
 
 
@@ -90,6 +92,20 @@
 
 
 `git commit -m` "해당 커밋에 대한 메세지"   (메세지 반드시 존재해야함)
+
+
+
+`git push 명칭 master` 하면 온라인에 업로드 됨(최신으로 업로드)
+
+
+
+**항상 add - commit - push 순서고 커밋수정될 때 마다 m 남겨주기**
+
+
+
+
+
+---
 
 
 
@@ -111,7 +127,7 @@
 
 `git remote -v`  연결 된 것들 주소 나옴 
 
-`git push 명칭 master` 하면 온라인에 업로드 됨(최신으로 업로드)
+
 
 
 
@@ -122,6 +138,39 @@
 참고  초기 등록시에는 로그인이 필요하다  
 
 만일 로그인이 틀렸을 시에는 윈도우 자격증명관리자를통해 지우면 된다.
+
+
+
+깃허브 사이트에서 등록하면 여러사람이 작업할때 충돌이 발생할 가능 성이 있기 때문에 
+
+로컬에서 작업한 것을 올려서 하는것 
+
+
+
+깃 메인 폴더에 숨김항목으로 .git 이 들어가 있으면서 관리함
+
+but 다른 컴퓨터에서 압축파일로 다운받으면 .git이 없음 
+
+
+
+방법)
+
+**.git 까지 한번에 복사해올라면  git clone URL주소 해와야함** (최초에만 해야함)
+
+
+
+그이후 최신화 정보를 받아올때는 pull 
+
+`git pull 이름 master` 
+
+
+
+**하나의 프로젝트에는 하나의 폴더? 만 **
+
+* 하위 폴더에서 새로운 프로젝트 생성 x
+* 
+
+
 
 
 
