스타트 캠프 수업 마무리

--- a/startcamp/1월 15일 수업.md
+++ b/startcamp/1월 15일 수업.md
@@ -168,7 +168,10 @@ but 다른 컴퓨터에서 압축파일로 다운받으면 .git이 없음
 **하나의 프로젝트에는 하나의 폴더? 만 **
 
 * 하위 폴더에서 새로운 프로젝트 생성 x
-* 
+
+
+
+**깃 올릴때 무지무지 중요한것 개인 Token, ID 코드내에 있는지 꼭 확인하고 올리지말자**
 
 
 
